--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@
 #container .game-over h2 {
   margin: 0;
   padding: 0;
-  font-size: 40px;
+  /* font-size: 40px; */
 }
 #container .game-ready {
   position: absolute;
